# isolang-wasm

./: Cargo.toml  LICENSE  Makefile  README.md
example/: app.js  index.html  package-lock.json  package.json
pkg/: README.md  isolang_wasm.d.ts  isolang_wasm.js  isolang_wasm_bg.js  isolang_wasm_bg.wasm  isolang_wasm_bg.wasm.d.ts  package.json
src/: lib.rs
